--- a/pages/index.css
+++ b/pages/index.css
@@ -132,10 +132,10 @@
   justify-content: center;
   gap: 40px;
   list-style: none;
-  margin: 0 0 24px;
+  margin: 0;
 }
 
-.recipes__iframe-container {
+.recipes__iframe {
   width: 480px;
   height: 273px;
 }
@@ -148,4 +148,5 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 30px;
+  margin-top: 24px;
 }
