New update for project - final update

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -5,6 +5,8 @@
   height: 800px;
   display: flex;
   flex-direction: column;
+  z-index: 1;
+  box-sizing: border-box;
 }
 
 .header__title {
@@ -42,6 +44,7 @@
   height: 568px;
   top: 124px;
   right: 5px;
+  z-index: -1;
 }
 
 .header__footer {
@@ -49,6 +52,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
+  color: #6f6f6f;
 }
 
 .header__paragraph {
